# ihys

./: .env.backend.dist  .env.db.dist  .env.frontend.dist  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py
backend/app/core/: config.py
backend/app/db/: base.py  models.py
backend/app/services/: oauth.py  security.py
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
