[project]
name = "ihys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "cryptography>=45.0.5",
    "fastapi>=0.116.0",
    "httpx-oauth>=0.16.1",
    "ipython>=9.4.0",
    "isort>=6.0.1",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.2",
    "sqlalchemy[asyncio]>=2.0.41",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.35.0",
]

[tool.black]
line-length = 88
target-version = ['py313']
skip-string-normalization = true
isort = true


[tool.isort]
line_length = 88
# use black code style
profile = "black"
# add one line between `import abc` and `from abc import ABC`
lines_between_types = 1
# split imports to multline, when 2 or more imports in one line
force_grid_wrap = 2


[tool.ruff]
line-length = 88
[tool.ruff.lint]
# enable opt-in rules from preview
preview = true
fixable = ["ALL"]
unfixable = [
  "ERA001", # commented-out-code
]
select = [
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # mccabe
  "COM",  # flake8-commas
  "DJ",   # flake8-django
  "E",    # pycodestyle errors
  "ERA",  # eradicate
  "F",    # pyflakes
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "N",    # pep8-naming
  "PERF", # perflint
  "PIE",  # flake8-pie
  "PT",   # flake8-pytest-style
  "Q",    # flake8-quotes
  "RUF",  # ruff
  "S",    # flake8-bandit
  "T10",  # flake8-debugger
  "W",    # pycodestyle warnings
]
ignore = [
  "Q001",  # bad-quotes-multiline-string
]

[tool.ruff.format]
quote-style="single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.mypy]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy"
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
strict_optional = true
